# chuck-data

./: CLAUDE.md  README.md  TEST_INSTRUCTIONS.md  TEST_MATRIX.md  pyproject.toml
.github/workflows/: publish-test-pypi.yml  python-lint.yml
chuck_data/: __main__.py  command_output.py  command_registry.py  config.py  constants.py  databricks_auth.py  job_cache.py  provider_factory.py  service.py
chuck_data/agent/: manager.py  tool_executor.py
chuck_data/clients/: __init__.py  amperity.py  databricks.py  emr.py  redshift.py  snowflake.py
chuck_data/commands/: __init__.py  add_stitch_report.py  auth.py  bulk_tag_pii.py  catalog.py  catalog_selection.py  create_volume.py  create_warehouse.py  database_selection.py  export_manifest.py  getting_started.py  help.py  job_status.py  jobs.py  list_catalogs.py  list_databases.py  list_models.py  list_redshift_schemas.py  list_schemas.py  list_tables.py  list_volumes.py  list_warehouses.py  model_selection.py  monitor_job.py  pii_tools.py  redshift_schema_selection.py  redshift_status.py  run_sql.py  scan_pii.py  schema.py  schema_selection.py  setup_stitch.py  setup_wizard.py  snowflake_database_selection.py  snowflake_list_databases.py  snowflake_list_schemas.py  snowflake_run_sql.py  snowflake_schema_selection.py  snowflake_status.py  snowflake_tag_pii.py  (+10 more)
chuck_data/compute_providers/: __init__.py  databricks.py  emr.py  provider.py
src/: command_registry.py
tests/: conftest.py  fixtures.py  test_agent_tool_display_routing.py  test_databricks_auth.py  test_manifest.py  test_permission_validator.py  test_tui_display.py
(+199 files in other folders)
