[project]
name = "chuck-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.50.0",
    "jsonschema>=4.23.0",
    "openai>=1.76.0",
    "prompt-toolkit>=3.0.50",
    "pydantic>=2.11.3",
    "readchar>=4.2.1",
    "requests>=2.32.3",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pexpect",
    "pyright",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/amperity/clamp-internal"
Source = "https://github.com/amperity/clamp-internal"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["assets/stitch_notebook_template.ipynb"]

[tool.pyright]
typeCheckingMode = "basic"
